--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-tsparticles": "^1.39.0",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
